--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         <div>
           <span class="eyebrow">Desenvolvimento de Sites</span>
           <h2 class="h1">Design corporativo com alma criativa.</h2>
-          <p class="lead">Criamos <strong>landing pages</strong>, <strong>sites institucionais</strong> e <strong>portfólios profissionais</strong> com foco em credibilidade, conversão e performance. Código limpo, visual moderno e experiência responsiva.</p>
+          <p class="lead">Transforme <strong>sua</strong>, <strong>presença online</strong> com <strong>um site moderno</strong> e responsivo.
+            Seja visto. Seja Lembrado. Entre em contato agora e tenha seu site em poucos dias!</p>
           <div class="hero-actions">
             <a class="btn primary" href="https://wa.me/5521975226075" target="_blank" rel="noopener">Falar no WhatsApp</a>
             <a class="btn" href="mailto:nova.studios.art@outlook.com">Enviar e-mail</a>
-            <a class="btn" href="#portfolio">Ver trabalhos</a>
+            <a class="btn" href="#portfolio">Gerar previa do meu Site</a>
           </div>
         </div>
         <div class="hero-card">
@@ -124,30 +125,7 @@
     </div>
   </section>
 
-  <section id="depoimentos">
-    <div class="wrap">
-      <div class="section-h">
-        <div>
-          <h2 class="title">Depoimentos</h2>
-          <p class="subtitle">Provas sociais que fortalecem a confiança.</p>
-        </div>
-      </div>
-      <div class="grid cols-3">
-        <article class="card">
-          <p>“Precisávamos de uma landing page rápida para campanha. O projeto ficou pronto em poucos dias e converteu acima do esperado.”</p>
-          <p class="small">— <strong>Mariana Costa</strong>, Marketing</p>
-        </article>
-        <article class="card">
-          <p>“Nosso site institucional ganhou credibilidade e desempenho. Atendimento claro e processo organizado.”</p>
-          <p class="small">— <strong>Clínica Vida</strong></p>
-        </article>
-        <article class="card">
-          <p>“Meu portfólio ficou elegante e objetivo. Recebi contatos já na primeira semana.”</p>
-          <p class="small">— <strong>Daniel Souza</strong>, Designer</p>
-        </article>
-      </div>
-    </div>
-  </section>
+ 
 
   <section id="processo">
     <div class="wrap">
@@ -173,50 +151,7 @@
     </div>
   </section>
 
-  <section id="precos" class="pricing">
-    <div class="wrap">
-      <div class="section-h">
-        <div>
-          <h2 class="title">Planos</h2>
-          <p class="subtitle">Valores de referência — personalize conforme o escopo.</p>
-        </div>
-      </div>
-
-      <div class="grid cols-3">
-        <article class="card">
-          <h3>Start</h3>
-          <div class="price">R$ 600</div>
-          <p class="small">Landing page de 1 seção + CTA</p>
-          <ul class="list">
-            <li>✔ Estrutura focada em conversão</li>
-            <li>✔ Integração WhatsApp</li>
-            <li>✔ Publicação incluída</li>
-          </ul>
-        </article>
-        <article class="card">
-          <h3>Business</h3>
-          <div class="price">R$ 1.200</div>
-          <p class="small">Site institucional 3–5 seções</p>
-          <ul class="list">
-            <li>✔ Sobre, Serviços, Contato</li>
-            <li>✔ SEO básico + performance</li>
-            <li>✔ 2 revisões inclusas</li>
-          </ul>
-        </article>
-        <article class="card">
-          <h3>Pro</h3>
-          <div class="price">R$ 1.800</div>
-          <p class="small">Portfólio completo</p>
-          <ul class="list">
-            <li>✔ Galeria de projetos</li>
-            <li>✔ Depoimentos e casos</li>
-            <li>✔ Formulário avançado</li>
-          </ul>
-        </article>
-      </div>
-    </div>
-  </section>
-
+ 
   <section id="sobre">
     <div class="wrap">
       <div class="section-h">
