--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="hero-actions">
             <a class="btn primary" href="https://wa.me/5521975226075" target="_blank" rel="noopener">Falar no WhatsApp</a>
             <a class="btn" href="mailto:nova.studios.art@outlook.com">Enviar e-mail</a>
-            <a class="btn" href="#portfolio">Gerar previa do meu Site</a>
+            <a class="btn" href="#portfolio">Explore a Prévia do seu Site</a>
           </div>
         </div>
         <div class="hero-card">
